; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_rtp_decoder.c_print_usage.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_rtp_decoder.c_print_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"Usage:\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"  %s [opts] <uri>\00", align 1
@.str.2 = private unnamed_addr constant [58 x i8] c"Reads RTP packets from <uri>, decodes to standard output.\00", align 1
@.str.3 = private unnamed_addr constant [47 x i8] c"Press the escape key to terminate the program.\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"Options:\00", align 1
@.str.5 = private unnamed_addr constant [30 x i8] c"  -h   Print this information\00", align 1
@.str.6 = private unnamed_addr constant [29 x i8] c"  -s x Save packets to URI x\00", align 1
@.str.7 = private unnamed_addr constant [35 x i8] c"  -v   Dump standard packet header\00", align 1
@.str.8 = private unnamed_addr constant [26 x i8] c"  -vv  Dump entire header\00", align 1
@.str.9 = private unnamed_addr constant [35 x i8] c"  -vvv Dump entire header and data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @print_usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i8* %4)
  %6 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i32*, i8*, ...) @LOG_INFO(i32* null, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.9, i64 0, i64 0))
  ret void
}

declare dso_local i32 @LOG_INFO(i32*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
